[package]
name = "intercept"
version = "0.1.0"
authors = ["SFBdragon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level=3

[dependencies]
cgmath = "0.18.0"
indexmap = "1.6.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false