[package]
name = "intercept"
version = "0.1.0"
authors = ["SFBdragon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level=3

[features]
f64 = []

[dependencies]
glam = "0.16.0"
fnv = "1.0.7"
indexmap = "1.6.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
