[package]
name = "intercept"
version = "0.1.0"
authors = ["SFBdragon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level=3

[features]
f64 = []

[dependencies]
approx = "0.4" # todo: change to 0.5 for next glam update
glam = { version = "0.17.1", features = ["approx"] }
fnv = "1.0.7"
indexmap = "1.6.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
